--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -22,6 +22,7 @@ rules:
   - persistentvolumeclaims
   - pods
   - secrets
+  - serviceaccounts
   - services
   - services/finalizers
   verbs:
@@ -66,6 +67,18 @@ rules:
   - create
   - get
 - apiGroups:
+  - rbac.authorization.k8s.io
+  resources:
+  - clusterroles
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - route.openshift.io
   resources:
   - routes
@@ -81,6 +94,7 @@ rules:
 - apiGroups:
   - security.openshift.io
   resourceNames:
+  - anyuid
   - nonroot
   resources:
   - securitycontextconstraints
